# sp1_connectsphere

./: Cargo.toml  Verification-ConnectSphere.md  Verivy-ConnectSphere.md
.github/workflows/: main.yml
proof-converter-script/: Cargo.toml
proof-converter-script/src/: main.rs
proof-of-secret-program/: Cargo.toml
proof-of-secret-program/src/: main.rs
proof-of-secret-script/: Cargo.toml  build.rs
proof-of-secret-script/src/: main.rs
